[ FIX ] - Fixed UI

--- a/src/client/game/index.html
+++ b/src/client/game/index.html
@@ -91,7 +91,7 @@
                     <div
                         id="mouse__coin"
                         class="slot slot__{{(index .Players (minus .PlayerToPlay 1)).Slot}}"
-                        style=""
+                        style="transform: translate(7.2em, 0px)"
                     ></div>
                 </div>
 
