[ FIX ] - Improved names, added background blur to popup with a cool animation with it.

--- a/src/client/game/index.html
+++ b/src/client/game/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/public/style.css" />
         <link rel="stylesheet" href="/public/game/style.css" />
         <script src="/public/game/script.js" defer></script>
+        <link rel="icon" type="image/x-icon" href="/public/imgs/logo.png" />
         <title>Game - Power4Web</title>
     </head>
     <body>
