[ FIX ] - Able to drag the logo -- made so we cant now lol

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="game__selection">
-            <img src="/public/imgs/logo.png" />
+            <img src="/public/imgs/logo.png" draggable="false" />
 
             <div class="selection__menu noselect">
                 <h1>Personnalise ton jeton</h1>
